# vansarah

./: README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: publish.yml
vansarah/: __init__.py  __main__.py  pipeline.py
vansarah.js/: package-lock.json  package.json
vansarah.js/demo/: README.md
vansarah.js/src/: phonemize.js  voices.js
