[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vansarah"
version = "0.9.4"
description = "TTS"
readme = "README.md"
authors = [
    { name="vansarah", email="donson.vietmold@gmail.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.10, <3.14"
dependencies = [
    "huggingface_hub",
    "loguru",
    "misaki[en]>=0.9.4",
    "numpy",
    "torch",
    "transformers"
]

[project.scripts]
vansarah = "vansarah.__main__:main"

[tool.hatch.build.targets.wheel]
only-include = ["vansarah"]
only-packages = true